# 5GNRAD-Python

./: .gitignore  README.md  main.m  pyproject.toml
channel/: backgroundChannel_4GHz_3GPP_38.901_UMa_NLOS.json
examples3GPP/UMa-Av200-8x8-192ss/Input/: simulationConfig.txt
examples3GPP/UMa-Av200-8x8-30-133RB/Input/: simulationConfig.txt
examples3GPP/UMa-Av200-8x8-30-24RB/Input/: simulationConfig.txt  targetConfig.txt
examples3GPP/UMa-Av200-8x8-30-51RB/Input/: simulationConfig.txt
examples3GPP/UMa-Av200-8x8-30/Input/: sensConfig.txt  simulationConfig.txt
examples3GPP/UMa-Av200-8x8-60/Input/: sensConfig.txt  simulationConfig.txt
scripts/: dashboard.py  export_all_fixtures.m  export_matlab_fixtures.m  validate_paper.py
src/: buildPartialCombiner.m  cfar2D_fast.m  cfar2D_fast_mod.m  detectCfar4D.m  estimateScatteringGeometry.m  getAntennaSortedIndex.m  getSensingCdl.m  pick_peaks_nms.m  run5GNRad.m  scoreAssociationsPos.m  stft.m
src/config/: configSens.m  configSimulation.m
src/gnrad5/: __init__.py  analysis.py  constants.py  paper_chain.py  paper_scenarios.py  plot_results.py  run.py  run_full.py  visualize.py
src/gnrad5/antenna/: __init__.py  array.py  type1_codebook.py
src/gnrad5/channel/: __init__.py  cir.py  loader.py  pathloss.py  rcs.py  sensing_cdl.py
src/gnrad5/config/: __init__.py  loader.py  models.py  utils.py
src/gnrad5/detection/: __init__.py  cfar.py  cfar_fast.py  cfar_fast_mod.py  cluster.py  detect_4d.py  (+4 more)
tests/: test_matlab_fixtures.py  test_paper_chain.py  test_par_detector.py  test_prs_regression.py  test_scenario_smoke.py
(+19 files in other folders)
